# waltti-analyzer

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: pre-push-checks.sh
.github/: copilot-instructions.md  mcp.json
.github/workflows/: cd.yml  ci.yml  copilot-setup-steps.yml  export-azure-config.yml  migrate-secrets-to-vars.yml  pr.yml
api/: function_app.py  local.settings.json.example  requirements.txt
api/WalttiAnalyzer.Functions/: Program.cs  WalttiAnalyzer.Functions.csproj  WalttiAnalyzer.Functions.sln  appsettings.json  host.json  local.settings.json.example
api/shared/: analyzer.py  collector.py  config.py  db.py  digitransit.py
app/: __init__.py  analyzer.py  collector.py  config.py  db.py  digitransit.py  scheduler.py
app/routes/: api.py  dashboard.py
app/static/: style.css
app/templates/: base.html  dashboard.html  macros.html  observations.html  stops.html
docs/: AI_DOCUMENTATION_CONTEXT.md  AI_INSTRUCTIONS.md
frontend/: app.js  index.html  style.css
infra/: main.bicep  main.json  parameters.json  rbac.bicep
scripts/: migrate-secrets-to-vars.sh
src/WalttiAnalyzer.Core/: WalttiAnalyzer.Core.csproj
src/WalttiAnalyzer.Web/: Program.cs  WalttiAnalyzer.Web.csproj  appsettings.json
test-func/: Program.cs  TestFunc.csproj
test-func/Functions/: HelloFunction.cs
tests/: conftest.py  test_analyzer.py  test_db.py  test_digitransit.py  test_routes.py  test_scheduler.py  test_sync.py
(+43 files in other folders)
